<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout">


    <EditText
        android:id="@+id/editText1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/texto1"
        android:textSize="18sp"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:importantForAccessibility="yes"
        android:autofillHints="none"
        android:textColor="#008AF8"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/edittext_outline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editText2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHeight_percent="0.4"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/texto2"
        android:textSize="18sp"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:importantForAccessibility="yes"
        android:autofillHints="none"
        android:textColor="#008AF8"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/edittext_outline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/editText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHeight_percent="0.4"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/compareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonComparar"
        app:layout_constraintTop_toBottomOf="@id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="18sp"
        android:minHeight="56dp" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/compareButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="21sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>